# echec

./: .gitignore  Dockerfile  Makefile  README.md  TODO  build.sh  make_dist.sh  pyproject.toml  tox.ini
src/echec/: echec.py  helpers.py  known_curves.py  main.py  point.py
src/echec/curve/: __init__.py  abstractcurve.py  edwards.py  montgomery.py  numbertheory.py  weierstrass.py
tests/: helpers.py  test_cli.py  test_known_curves.py  test_known_curves_xcoords.py  test_unknown_curves.py
